# MakeAppImageTorrent

./: CMakeLists.txt  LICENSE  MakeAppImageTorrent.cc  MakeAppImageTorrent.desktop  README.md  gen_trackers_header.py
.github/workflows/: main.yml
